--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "flowchat-facebook-messenger",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Facebook Messenger I/O and Effects for Flowchat",
   "main": "dist/lib/index.js",
   "scripts": {
-    "compile": "babel --out-dir dist lib/**/*.js",
+    "compile": "babel --out-dir dist io/*.js effects/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
