--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Facebook Messenger I/O and Effects for Flowchat",
   "main": "dist/lib/index.js",
   "scripts": {
+    "prepublish": "npm run compile",
     "compile": "babel --out-dir dist io/*.js effects/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
