--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "flowchat-facebook-messenger",
-  "version": "1.0.8",
+  "version": "1.0.13",
   "description": "Facebook Messenger I/O and Effects for Flowchat",
-  "main": "dist/lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "prepublish": "npm run compile",
     "compile": "babel --out-dir dist io/*.js effects/*.js",
